--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
  <header>
      selena-shows
      </hearder>   
-     
- <h1>no me queda mas</h1>
+     <section class= "chamada">
+     <div class="chamada-texto"> 
+      <h1>no me queda mas</h1>
  <p>selena quintanilla</p>
+ </div>
+ <div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hKVH5g99FPI?si=l2TjcCZ_BQYhY5yw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+ </section>
+ <section class="categoria">
+ <h2>músicas</h2>
+ <div class="categoria-videos">
 <h1>la carcacha</h1>
  <p>selena quintanilla</p>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/mOpZylrrymM?si=ao1B1xu24uIKv612" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -27,7 +35,7 @@
 <p>selena quintanilla</p>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/jjiDkWgHayI?si=tXZkJgEF4LAy7IzP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-
- 
+</div>
+</section> 
 </body>
 </html>
